[gd_scene load_steps=5 format=3 uid="uid://blqy6simb1yg6"]

[ext_resource type="Script" path="res://scripts/npcs/npc.gd" id="1_dpby6"]
[ext_resource type="Texture2D" uid="uid://25dc3gukicm6" path="res://assets/sprites/characters/allchars.png" id="1_o8ss1"]
[ext_resource type="PackedScene" uid="uid://lmddb58fek1g" path="res://scenes/npcs/globe.tscn" id="2_3x7ja"]
[ext_resource type="PackedScene" uid="uid://bngej0qlviycp" path="res://scenes/npcs/name_label.tscn" id="4_er74h"]

[node name="NPC" type="Sprite2D"]
texture = ExtResource("1_o8ss1")
script = ExtResource("1_dpby6")
globe_scene = ExtResource("2_3x7ja")

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(207.155, 79.775)
offset_left = 48.0
offset_right = 112.0
offset_bottom = 54.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/v_separation = 50

[node name="NameLabel" parent="GridContainer" instance=ExtResource("4_er74h")]
layout_mode = 2
types = Array[String]([""])

[node name="TimeBar" type="ProgressBar" parent="GridContainer"]
layout_mode = 2
rounded = true
show_percentage = false

[node name="TimeLeft" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="TimeLeft" to="." method="_on_time_left_timeout"]
